Fixed tex warnings
git-svn-id: https://svn.mccode.org/svn/McStasTeX@207 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -161,7 +161,7 @@ ${\bf v}_{\rm i}$ is computed by the formula
 \begin{equation}
  {\bf v}_{\rm f} =
   {\bf v}_{\rm i}
-   - 2{{\bf n} \cdot {\bf v}_{\rm i} \over {|{\bf n}|^2}} {\bf n}
+   - 2{{\bf n} \cdot \frac{{\bf v}_{\rm i}}{{|{\bf n}|^2}} {\bf n}}
 \end{equation}
 This expression is arrived at by again considering the projection onto
 the mirror normal (see figure~\ref{f:guidereflect}). The reflectivity of the
