--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -8,7 +8,7 @@ of neutron weights.  Secondly, we give an expression for how the weight
 factor transforms under a Monte Carlo choice and specialize this
 to the concept of direction focusing.  Finally, we present a way of
 generating random numbers with arbitrary distributions.
-More details are available in Appendix \ref{s:random}.
+More details are available in the Appendix concerning random numbers in the User manual.
 
 
 \section{Neutron spectrometer simulations}
