Docs for Tunneling_sample.comp
git-svn-id: https://svn.mccode.org/svn/McStasTeX@209 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/samples.tex
+++ b/trunk/samples.tex
@@ -197,6 +197,7 @@ of the samples.
 
 
 \input{vanadium.tex}         \newpage
+\input{tunneling.tex}        \newpage
 \input{powderN.tex}          \newpage
 \input{Single_crystal.tex}   \newpage
 \input{sans.tex}             \newpage
