--- a/trunk/abstractpage.tex
+++ b/trunk/abstractpage.tex
@@ -11,13 +11,13 @@ The authors are:
 \begin{quote}
 \label{p:authors}
 Peter Kj\ae r Willendrup \verb+<peter.willendrup@risoe.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
+Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark 
 
 Emmanuel Farhi \verb+<farhi@ill.fr>+ \\
 Institut Laue-Langevin, Grenoble, France 
 
 Kim Lefmann \verb+<kim.lefmann@risoe.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
+Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark 
 
 \end{quote}
 as well as authors who left the project:
@@ -37,7 +37,7 @@ Presently associated with: MySQL AB, Sweden
 %taking into account the secondary extinction. See
 %section~\ref{s:vanadium-result}.
 \vfill
-\noindent ISBN 87--550--3481--0 (Internet)
+\noindent ISBN 978--87--550--3617--8
 \par\noindent ISSN 0106--2840
 \par\noindent\hbox{}\hfill
     Pitney Bowes Management Services Denmark A/S $\cdot$ Ris{\o} National Laboratory $\cdot$ \number\year
