--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -13,11 +13,11 @@ The authors are:
 \label{p:authors}
 \vskip\baselineskip\noindent
 Kim Lefmann \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
+Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark \\
 email: \verb+kim.lefmann@risoe.dk+
 \vskip\baselineskip\noindent
 Peter Kj\ae r Willendrup \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
+Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark \\
 email: \verb+peter.willendrup@risoe.dk+
 \vskip\baselineskip\noindent
 Kristian Nielsen \\
@@ -28,15 +28,15 @@ Institut Laue-Langevin, Grenoble, France \\
 email: \verb+farhi@ill.fr+
 \vskip\baselineskip\noindent
 Klaus Lieutenant \\
-Institut Laue-Langevin, Grenoble, France \\
-email: \verb+lieutenant@ill.fr+
+Institutt for Energiteknikk, Kjeller, Norway\\
+email: \verb+Klaus.Lieutenant@ife.no+
 \end{quote}
 %Front page illustration:\\[\baselineskip]
 %Simulated scattering from a vanadium sample
 %taking into account the secondary extinction. See
 %section~\ref{s:vanadium-result}.
 \vfill
-\noindent ISBN 87--550--3482--9
+\noindent ISBN 978--87--550--3619--2
 \par\noindent ISSN 0106--2840
 \par\noindent\hbox{}\hfill
     Pitney Bowes Management Services Denmark A/S $\cdot$ Ris{\o} National Laboratory $\cdot$ \number\year
