--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -58,9 +58,8 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
  \MCS , Version \version}
-\forfatter{Peter Willendrup, Emmanuel Farhi, Klaus Lieutenant, Kim
-  Lefmann, and Peter Christiansen}
-\isbn{ISBN 87--550--3561--2 (Internet)}\issn{0106--2840}
+\forfatter{Peter Willendrup, Emmanuel Farhi and Kim Lefmann}
+\isbn{ISBN 978--87--550--3617--8}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
 \regnummer{---}
