--- a/trunk/risoe-rep-title.tex
+++ b/trunk/risoe-rep-title.tex
@@ -40,13 +40,12 @@
  \space\number\year }
 
 \let\reportlan=\relax
-\def\month{11}                   % Released in November 2005
+\def\month{7}                   % Released in November 2005
 % Need to match front page line breaking.
 \title{User~and~Programmers~Guide~to~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Peter Willendrup, Emmanuel Farhi, Kim Lefmann,\\
-Peter Christiansen and Klaus Lieutenant}
+\author{Peter Willendrup, Emmanuel Farhi and Kim Lefmann}
 
 \maketitle
 \endgroup
