--- a/trunk/risoe-rep_comp-title.tex
+++ b/trunk/risoe-rep_comp-title.tex
@@ -40,12 +40,11 @@
  \space\number\year }
 
 \let\reportlan=\relax
-\def\month{11}                   % Released in November 2005
+\def\month{7}                   % Released in November 2005
 % Need to match front page line breaking.
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Kim Lefmann, Peter Kj\ae r Willendrup,
-Emmanuel Farhi, Peter Christiansen and Klaus Lieutenant}
+\author{Kim Lefmann, Peter Kj\ae r Willendrup and Emmanuel Farhi}
 \maketitle
 \endgroup
