--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -3,29 +3,15 @@
 \chapter{New features in \MCS\ \version\ }
 \label{c:changes}
 
-This version of \MCS\ implements both new features, as well as many bug corrections, especially for the Windows platform. Bugs are reported and traced using the \MCS\ Bugzilla system \cite{mczilla_webpage}. We will not present here an extensive list of corrections, and we let the reader refer to this bug reporting service for details. Only important changes are indicated here.
+This version of \MCS\ implements both new features, as well as many bug corrections. Bugs are reported and traced using the \MCS\ Bugzilla system \cite{mczilla_webpage}. We will not present here an extensive list of corrections, and we let the reader refer to this bug reporting service for details. Only important changes are indicated here.
 
 Of course, we can not guarantee that the software is bullet proof, but we do our best to correct bugs, when they are reported.\index{Bugs}
 
-\section{General}
-\label{s:new-features:general}
-\begin{itemize}
-\item  This release is a major step forward for McStas in terms of
-  support for polarisation. Peter Christiansen who worked at Ris\o\
-  March-October 2006 was the main workforce behind this new
-  functionality, backed by funding from ISIS, work by Rob Dalgliesh at
-  ISIS plus inspiration from the VitESS and NISP packages. As this is
-  the first release with polarisation support, the methods and
-  algorithms implemented will certainly bed developed further. Hence,
-  documentation of the functionality has been placed in the Appendix
-  % \ref{c:polarization}
-  of the Component manual. Polarisation users: Please give
-  us feedback for further development! Items marked by {\bf(p)} below
-  relate to the new polarisation support.
-\item New keywords for the meta language improves support for e.g. description of sample enviroments.
-\item A method for automatic optimisation has been implemented, e.g.~for achieving maximum flux at the sample position (any quantity measured by a McStas monitor can be optimised) as a function of simulation parameters.
-\item Bugfixes in many different areas.
-\end{itemize}
+%\section{General}
+%\label{s:new-features:general}
+%\begin{itemize}
+%\end{itemize}
+
 \section{Kernel}
 \label{s:new-features:kernel}
 \index{Kernel}
@@ -33,16 +19,9 @@ Of course, we can not guarantee that the software is bullet proof, but we do our
 The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and program). See the dedicated chapter in the {\it User manual} for more details.
 
 \begin{itemize}
-\item New \verb+WHEN+ keyword, conditional use of components,
-  \\\verb+COMPONENT MyComp=Component(...) WHEN (condition) AT+
-\item New \verb+JUMP+ keyword, possibility to iterate a given component a
-  number of times (multiple scattering) or for 'teleportation' to a
-  given component. (USE WITH CAUTION)
-\item Improved \verb+COPY+ keyword with parameter substitution (Make a copy
-  of an other component instance with a few parameters changed)
-\item Spin propagation algorithm (When magnetic field is set 'on', the
-  central propagation routines also handle Larmor precession in the field) {\bf(p)}
-\item Handeling of analytical B-fields {\bf(p)}
+\item New \verb+SPLIT+ keyword, method for improvement of statistics. Can be considered equivalent to splitting
+  simulations in part by use of the \verb+Virtual_output+ and \verb+Virtual_input+ components. Please consult the
+  relevant documentation in Section \ref{s:instrdefs-extend-enhance} before using this feature!
 \end{itemize}
 
 \section{Run-time}
@@ -50,46 +29,38 @@ The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and pro
 \index{Library!Run-time}
 
 \begin{itemize}
-\item Optmisation support in mcrun/mcgui using Perl::Amoeba (see description above)
-\item \verb+POSIX+ threading on multi-core processors (BEWARE, performance is generally better using MPI)
+\item The threading mechanism for parallelisation has been removed from McStas since it caused too many problems. For 
+  parallelisation on single machines (e.g. modern dual-core processors) or clusters, MPI (MPICH) is the recommended solution.
+  The McStas team members routinely run developer machines and clusters using MPI.
 \end{itemize}
 
 
 \section{Components and Library}
 \label{s:new-features:components}
 \index{Components} \index{Library!Components}
-
-We here list some of the new components (found in the \MCS\ \verb+lib+ directory)
+We here list the new and updated components (found in the \MCS\ \verb+lib+ directory)
 which are detailed in the {\it Component manual}, also mentioned in
 the {\it Component Overview} of the {\it User Manual}.
 \subsection{New components}
 \begin{itemize}
-\item Monochromator\_pol.comp - Polarising monochromator/analyzer {\bf(p)}
-\item Pol\_bender.comp - Polarising bender {\bf(p)}
-\item Pol\_mirror.comp - Polarising mirror {\bf(p)}
-\item Pol\_guide\_vmirror.comp - Guide with semi-transparent, polarising mirror {\bf(p)}
-\item Pol\_simpleBfield.comp - Numerical precession in analytical B-fields {\bf(p)}
-\item 3 Polarisation monitors - MeanPolLambda\_monitor.comp, PolLambda\_monitor.comp
-    Pol\_monitor.comp {\bf(p)}
-\item PSD\_Detector.comp - Physical detector - comes with many gas lookup tables
-    (Contrib: Thorwald van Vuure, ILL)
-\item Virtual\_mcnp\_*.comp - MCNP event file handeling
-    (Contrib: Chama Hennane, ENSIMAG and Emmanuel Farhi, ILL)
-\item Source\_multi\_surfaces.comp - Source comp with multiple surface areas with individual
-    spectrums (Contrib: Ludovic Giller, EPFL and Uwe Filges, PSI)
-\item multi\_pipe.comp - Defines a 'grid' of slits (focusing device)
-    (Contrib: Uwe Filges, PSI)
-\item Exact\_radial\_coll.comp - Radial collimator comp, exact model
-    (Contrib: Roland Schedler, HMI)
-\item FermiChopper\_ILL.comp  - Fermi Chopper comp with optional
-  supermirror coated blades. (Contrib: Helmut Schober, ILL)
-\item V\_sample enriched with quasi-elastic features (Kim Lefmann)
+\item \verb+Tunneling_sample.comp+ Double-cylinder shaped all-incoherent scatterer with elastic, quasielastic (Lorentzian)
+  and tunneling (sharp) components. No multiple scattering. Absorbtion included. By Kim Lefmann
+\item \verb+TOF2E_monitor.comp+ TOF-sensitive monitor, converting to energy. By Kim Lefmann
+\end{itemize}
+\subsection{Updated components}
+\begin{itemize}
+\item \verb+Source_adapt.comp+, additions by Aaron Percival which allows to specify a flat wavlength distibution.
+\item \verb+Single_crystal.comp+, warning NOT to use this component as a monochromator (bug fix/validation under way).
+\item \verb+Powder_N.comp+, can now be used in concentric mode, i.e. for modelling sample surroundings (cryostat, container..).
+\item Various minor updates to other components, including \verb+Monochromator_curved.comp+ and \verb+Progress_bar.comp+
 \end{itemize}
 \subsection{New example instruments}
 \begin{itemize}
-\item TAS frontend with reciprocal space (hkl) calculator (Emmanuel Farhi)
-\item Example instruments for polarisation comps {\bf(p)}
-\item QUENS\_test.instr (Test of new quasi-elastic features V\_sample)
+  \item \verb+ILL_H15_IN6+ by Emmanuel Farhi
+  \item \verb+ILL_H142_IN12+ by Emmanuel Farhi
+  \item \verb+Histogrammer.instr+ by Peter Willendrup - see the 'Tools' section
+  \item \verb+ESS_IN5_reprate.instr+ Instrument for simulating IN5-TYPE (cold chopper) multi-frame spectrometer at ESS LPT.
+    (example instrument for \verb+Tunneling_sample.comp+.) By  Kim Lefmann
 \end{itemize}
 \section{Documentation}
 \label{s:new-features:documentation}
@@ -105,18 +76,50 @@ the {\it Component Overview} of the {\it User Manual}.
 \index{Installing}
 \subsection{New tools}
 \begin{itemize}
-\item New 'merge/convert' tool mcformat: Convert between McStas output formats and merge cluster
-    node datasets into one dataset. Does not handle merging of raw event files.
-\item TOF mode for mcdisplay (Statistical chopper acceptance diagrams generated from the simulated
-    neutron rays. Currently only supported on Unix systems with PGPLOT.)
+  \item New mcdaemon for visualisation of intermediate simulation results (obtained by sending USR2 signal to a 
+    running simulation or by using the \verb+Progress_bar+ component with \verb+flag_save=1+).
+  \item Improvements to mcgui:
+    \begin{itemize}
+      \item New tool menu with hooks to mcformat, mcdaemon and mcplot
+      \item Possibility for auto-setup of MPI ssh keys
+      \item Possibility to run the McStas editor in 'detached' mode, hence available whilst a simulation is running
+      \item Histogrammer.instr: Special histogramming instrument for visualisation of virtual source files (\verb+Virtual_input+,
+	VitESS, MCNP and Tripoli formats)
+    \end{itemize}
+  \item PGPLOT output format (original McStas format) is now possible on Windows. A pgplot/pgperl installation
+    is included in a standard McStas Win32 installation.
+  \item  NeXus output format possible. To use this feature, HDF and NeXus libraries must be available
+    and functional on your system before installing McStas from source. (In case of a binary package, 
+    you MUST recompile the McStas software.) To enable a McStas build with NeXus, run 
+    \verb+./configure --with-nexus.+
 \end{itemize}
 \subsection{Installation}
-\begin{itemize}
-\item Much easier installation on Windows, single executable file with all support applications
-    is now available. Simply click 'next' alle the way and you are done.
-\item PGPLOT and Scilab installation help tools on Linux systems
+\begin{itemize} 
+\item Mac OS X is now considered a supported platform. For now, no actuall installer program
+  is given, but all needed software has been packed together with easy to follow instructions.
+  Test of the instructions have been performed on Mac OS X 10.4 Tiger on both Intel and PPC
+  hardware.
+\item McStas now comes in a Debian binary package (\verb+.deb+), tested to work on Debian and Ubuntu systems. The debian
+    package provides McStas, pgplot and pgperl and have dependencies for the perl, perl-tk, gcc, libg2c0, pdl and libc6-dev 
+    packages.See \verb+http://www.mcstas.org+ or  Chapter \ref{installing} for details.
+\item As also mentioned in the list of new tools, PGPLOT output is available on Windows with a default \MCS\ installation.
+\item  Intel C compiler - The documentation now includes instructions to run McStas with the Intel C compiler (available on Windows,
+    Linux x86 and Mac OS x86 systems). Typically, a performance gain of 2 is found relative to gcc -O2. Relevant
+    compiler flags are:
+    \begin{itemize}
+      \item \verb+MCSTAS_CFLAGS="-g -O2 -wd177,266,1011,181"+
+    \end{itemize}
+\item To run McStas with MPI and the Intel C compiler, you may have to edit your mpicc shell script to set \verb+CC="icc"+
 \end{itemize}
 Details about the installation and the available tools are given in chapter \ref{installing}.
+
+\subsection{Warnings}
+{\bf WARNING:} The 'dash' shell which is used as /bin/sh on some Linux system (Including Ubuntu 7.04) makes the 'Cancel' and 'Update' 
+buttons fail in mcgui. Solutions are:
+\begin{itemize}
+\item[a)] If your system is a Debian or Ubuntu, please install our Debian package which requests automatic removal of 'dash'.
+\item[b)] If your /bin/sh is dash, please install bash and manually change the /bin/sh link to point at bash.
+\end{itemize}
 
 \section{Future extensions}
 \label{s:future}
@@ -127,8 +130,6 @@ The following features are planned for the oncoming releases of \MCS\
 \item Extend test cases to all (most) components. One instrument
   pr. component. (Probably not in \verb+examples/+.
 \item Better support for heterogeneous grid computing.
-\item Improvements to the NeXus data format (initial support is
-  already included).
 \item Updates to mcresplot to support the Matlab and Scilab backends.
 \item Compatibility issues with recent Perl releases on Windows.
 \item Compatibility issues with the next release of Scilab.
