A few more tex edits
git-svn-id: https://svn.mccode.org/svn/McStasTeX@211 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/datablad_comp.tex
+++ b/trunk/datablad_comp.tex
@@ -51,7 +51,7 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{Component Manual to the Neutron Ray-Tracing Package
  \MCS , Version \version}
-\forfatter{Kim Lefmann, Peter Kj\ae r Willendrup, Kristian Nielsen, Emmanuel Farhi, Klaus Lieutenant}
+\forfatter{Kim Lefmann, Peter Kj\ae r Willendrup, and Emmanuel Farhi}
 \isbn{ISBN 978--87--550--3619--2}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
