--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -62,6 +62,10 @@ The Focus time-of-flight instrument is, with the ILL IN6 and IN12 models, the mo
 
 A typical diffractometer including a powder sample and a Rescal-type triple-axis models are in this category. Instrument parameters enable models to cope with most existing instruments of these classes. The TAS model includes a basic in-plane UB-matrix transformation. It may be used to estimate the resolution functions of a TAS configuration.
 
+\subsection{Neutron site: ESS}
+
+This section contains design studies for a future, long-pulsed european spallation source. The only contents is currently the \verb+ESS_IN5_reprate+ instrument for simulating an IN5-TYPE (cold chopper) multi-frame spectrometer for the long-pulsed ESS. (Also serves as example instrument for \verb+Tunneling_sample.comp+.)
+
 \section{A test instrument for the component V\_sample}
 \label{s:V-instr}
 This is one of many test instruments written with the
