Adding in docs for Kim's TOF2E_monitor.
Will now have dinner, do last sanity checks and then release 1.11! :)


git-svn-id: https://svn.mccode.org/svn/McStasTeX@212 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/monitors.tex
+++ b/trunk/monitors.tex
@@ -52,6 +52,8 @@ but will prove challenging for users who like to perform own modifications.
 \newpage
 \input{tof_monitor}
 
+\input{tof2e_monitor}
+
 \input{e_monitor}
 
 \input{l_monitor}
