corrected some spelling errors
git-svn-id: https://svn.mccode.org/svn/McStasTeX@214 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -30,7 +30,7 @@ $Z$ axis), and \textit{mosaic\_n} (rotation around the $X$ axis); in all
 cases in units of full-width-half-maximum minutes of arc.
 
 Optionally, the absorption cross-section at 2200 m/s and the incoherent
-cross-section may be given as \textit{absorbtion} and
+cross-section may be given as \textit{absorption} and
 \textit{incoherent} (in barns), with default of zero; and
 \textit{p\_transmit} may be assigned a fixed Monte Carlo probability for
 transmission through the crystal without any interaction.
@@ -43,7 +43,7 @@ $\boldsymbol{b}$, and $\boldsymbol{c}$, from which the reciprocal lattice
 will be computed. See section \ref{s:Single_crystal_implement} for file format specifications.
 
 In addition to coherent scattering, {\bf Single\_crystal} also
-handles incoherent scattering amd absorption. The incoherent scattering
+handles incoherent scattering and absorption. The incoherent scattering
 cross-section is supplied by the user as a constant
 $\sigma_{\rm inc}$. The absorption cross-section is supplied by the user at
 2200~m/s, so the actual cross-section for a neutron of velocity $v$ is
