--- a/trunk/vanadium.tex
+++ b/trunk/vanadium.tex
@@ -65,7 +65,7 @@ the cylinder, the kernel function \\
 is used twice, once for the outer radius and once
 for the inner radius.
 
-Multiple scattering is not inlcuded in this component. To obtain
+Multiple scattering is not included in this component. To obtain
 intensities similar to real measured ones, we therefore do not
 take attenuation from scattering into account for the outgoing
 neutron ray.
