--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -11,7 +11,7 @@ list~\cite{mcstas_webpage} or the authors should be contacted.
 the \MCS\ tools do not support filenames / directories with spaces.
 We are working on a more general approach to this problem, which will
 hopefully be solved in a further release. Also, there are known issues
-for \MCS\ with recent Perl versions for Windows. We recommand to use
+for \MCS\ with recent Perl versions for Windows. We recommend to use
 ActiveState {\bf Perl 5.6}. (Note that as of \MCS\ 1.10, all needed
 support tools for Windows are bundled with \MCS\ in a single installer file.)
 
@@ -430,7 +430,7 @@ turned off using the \verb+--data-only+ or \verb+-a+ option.
 The format of the output files from \MCS\ simulations is described in
 more detail in section~\ref{s:analyze}. It may be chosen either with \verb+--format=FORMAT+ for each simulation or globally by setting the MCSTAS\_FORMAT environment variable. \index{Environment variable!MCSTAS\_FORMAT}
 The available format list is obtained using the \verb+name.out --help+ option, and shown in Table~\ref{t:formatoptions}. \index{Tools!PGPLOT} \index{Tools!Matlab} \index{Tools!Scilab} \index{Tools!VRML/OpenGL} \index{Tools!HTML} \index{Data formats}
-\MCS\ can presently generate many formats, including the original \MCS /PGPLOT and the Scilab and Matlab formats. All formats, except the \MCS /PGPLOT, may eventually support binary files, which are much smaller and faster to import, but are platform dependent. The simulation data file extensions are appended automatically, depending on the format, if the file names do not contain any. Binary files are particularly recommanded for the IDL format (e.g. \verb+--format=IDL_binary+), and the Matlab and Scilab format when handling large detectors (e.g. more than 50x50 bins). For example:
+\MCS\ can presently generate many formats, including the original \MCS /PGPLOT and the Scilab and Matlab formats. All formats, except the \MCS /PGPLOT, may eventually support binary files, which are much smaller and faster to import, but are platform dependent. The simulation data file extensions are appended automatically, depending on the format, if the file names do not contain any. Binary files are particularly recommended for the IDL format (e.g. \verb+--format=IDL_binary+), and the Matlab and Scilab format when handling large detectors (e.g. more than 50x50 bins). For example:
 \begin{verbatim}
     ./vanadium_example.out ROT=90 --format="Scilab_binary"
 \end{verbatim}
@@ -1234,7 +1234,7 @@ The drawing back-end program may be selected among PGPLOT, VRML, Matlab and Scil
 
 It should be emphasized that \verb+mcplot+ may \emph{only} display simulation results with the format that was chosen during the computation. Indeed, if you request data in a given format from a simulation, you will only be able to display results using that same drawing back-end.
 
-Anyway, the \verb+mcconvert+ utility may convert a \MCS\ data file between Matlab and Scilab formats (see section \ref{s:mcconvert}), also handling binary data sets. Alternatively, the \verb+mcformat+ utility will convert any \MCS\ result into data format (see section \ref{s:mcformat}), but restricting to text data sets. In this case, we recommand to generate data sets using PGPLOT/McStas format, and translate into any other format using \verb+mcformat+.
+Anyway, the \verb+mcconvert+ utility may convert a \MCS\ data file between Matlab and Scilab formats (see section \ref{s:mcconvert}), also handling binary data sets. Alternatively, the \verb+mcformat+ utility will convert any \MCS\ result into data format (see section \ref{s:mcformat}), but restricting to text data sets. In this case, we recommend to generate data sets using PGPLOT/McStas format, and translate into any other format using \verb+mcformat+.
 
 The \verb+mcplot+ front-end can also be run from the \verb+mcgui+ front-end.
 \index{Tools!mcgui}
@@ -1413,9 +1413,9 @@ To analyze simulation results, one uses the same tools as for analyzing
 experimental data, \textit{i.e}. programs such as IDL, Matlab and Scilab.
 The output files from simulations are usually simple text files containing headers and data blocks. If data blocks are empty they may be accessed refering to an external file indicated in the header. This file may also be a binary file (except with the original \MCS /PGPLOT format), which does not contain any header (except if simulation is launched with \verb|+a| option), but are in turn smaller in size and faster to import.
 
-In order for the user to choose the data format, we recommand to set it using the \verb+--format=FORMAT+ or alternatively {\it via} the MCSTAS\_FORMAT environment variable, which will also make the front-end programs able to import and plot data and instrument consistently (see Section \ref{s:run-sim}). The available format list is shown in Table~\ref{t:formatoptions}. \index{Environment variable!MCSTAS\_FORMAT}
+In order for the user to choose the data format, we recommend to set it using the \verb+--format=FORMAT+ or alternatively {\it via} the MCSTAS\_FORMAT environment variable, which will also make the front-end programs able to import and plot data and instrument consistently (see Section \ref{s:run-sim}). The available format list is shown in Table~\ref{t:formatoptions}. \index{Environment variable!MCSTAS\_FORMAT}
 
-Note that the neutron event counts in detectors is typically not very
+Note that the neutron event counts in detectors are typically not very
 meaningful except as a way to measure the performance of the
 simulation. Use the simulated intensity instead whenever analysing
 simulation data.
@@ -1548,11 +1548,11 @@ Parallelizing a computation is in general possible when dependencies between
   it is possible to distribute each scan step on a list of computers.
 \item when using an homogeneous computer cluster, each simulation (including scan
   steps) may be computed in parallel using MPI (using \texttt{mcrun
-    --mpi=Nb\_Nodes}). We highly recommand this method which shows
-  excellent performances (but require the user to install MPI).
+    --mpi=Nb\_Nodes}). We highly recommend this method which shows
+  excellent performance (but requires the user to install MPI).
 \item when using SMP machines (multi processor machines) \MCS\ may
   distribute the simulations among CPU's using multi-threading
-  mechanism. Even though most systems now support multi-threading (i.e. do not require specific installation), the performances are very limited compared to MPI.
+  mechanism. Even though most systems now support multi-threading (i.e. do not require specific installation), the performance gain is very limited compared to MPI.
 \end{itemize}
 
 Last but not least, you may run simulations manually on a number of machines.
@@ -1604,8 +1604,8 @@ neutrons simulated. As a result, \MCS\ generates two kinds of data sets:
   is performed using the final $p_0$, $p_1$, and $p_2$ arrays (see Section \ref{s:staterror}).
 \item event lists: the merge of events is done by concatenation
 \end{itemize}
-The MPI support requires to have MPICH (recommanded), or alternatively LAM-MPI, installed on a set of nodes.
-This usually also requires to setup properly the \texttt{ssh} connections and keys as indicated in the ssh grid system (Section \ref{s:ssh-grid}).
+The MPI support requires that MPICH (recommended), or alternatively LAM-MPI, is installed on a set of nodes.
+This usually also requires properly setup \texttt{ssh} connections and keys as indicated in the ssh grid system (Section \ref{s:ssh-grid}).
 
 There are 3 methods for using MPI
 \begin{itemize}
@@ -1747,7 +1747,7 @@ every node.
 \item MPI must be correctly configured: if using \verb'ssh', you
   have to set ssh keys to avoid use of passwords; if
   using \verb'rsh', you have to set a \verb'.rhosts' file
-\item When reading external data files during the TRACE (specially virtual sources) all nodes might access the same data, potentially producing wrong results. We do not recommand using MPI when reading virtual sources.
+\item When reading external data files during the TRACE (specially virtual sources) all nodes might access the same data, potentially producing wrong results. We do not recommend using MPI when reading virtual sources.
 \item \MCS\ with MPI support was demonstrated to run efficiently up to 10 machines. Above this value, communication issues between nodes may arise, depending on the architecture and network capabilities, particularly when running scans of parameters.\index{Bugs}
 \end{itemize}
 
@@ -1755,7 +1755,7 @@ every node.
 
 Multi-threading is under experimentation. It has been implemented when using \\\verb+mcrun -c --threads=NB_CPU ...+.
 
-The method is based on a parallel execution of threads. This introduces quite large overhead and dramatically reduces efficiency. We thus do NOT recommand to use it. Further developments are under way.
+The method is based on a parallel execution of threads. This introduces quite large overhead and dramatically reduces efficiency. Thus, we do NOT recommend using it. Further developments are under way.
 
 %%% Local Variables:
 %%% mode: latex
