Update of PowderN docs - concentricity.
Also updated Isotropic_Sqw index entries to include 'concentricity'


git-svn-id: https://svn.mccode.org/svn/McStasTeX@219 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -4,6 +4,7 @@
 \index{Coherent and incoherent isotropic scatterer}
 \index{Inelastic scattering}
 \index{Sample environments}
+\index{Concentric components}
 \index{Multiple scattering}
 
 \component{Isotropic\_Sqw}{V. Hugouvieux, E. Farhi}{Sqw$\_{coh}$, $\sigma_{coh}$, Sqw$\_{inc}$, $\sigma_{inc}, V_\rho, \sigma_{abs}, T$,$x_{width},y_{height},z_{thick},r_o, r_i$, thickness}{$q_{min}, q_{max}, \omega_{min}, \omega_{max}, d\phi$, order}{validated (Vanadium, l-Rb, PowderN more accurate for powders) }
